[tool.poetry]
name = "store-sales-ts-forecasting"
version = "0.1.0"
description = ""
authors = ["Shikonn <shikunsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.4.4"
kaggle = "^1.5.12"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

